--- a/src/styles/pages/_pages.scss
+++ b/src/styles/pages/_pages.scss
@@ -1,6 +1,7 @@
 @import 'community';
 @import 'features';
 @import 'getting-started';
+@import 'rfcs';
 @import 'documentation';
 @import 'home';
 @import '404';
